re PR tree-optimization/45120 (-fipa-pta causes FAIL: gcc.c-torture/execute/pta-field-2.c execution)

2010-07-29  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/45120
	* tree-ssa-structalias.c (get_constraint_for_component_ref):
	Handle offset in DEREFs properly.
	(get_constraint_for_1): Handle MEM_REF offset properly.

	* gcc.dg/ipa/ipa-pta-15.c: New testcase.

From-SVN: r162676